apps/auth/lldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  namespace: auth
  annotations:
    # sticky sessions, to let login work properly when replicas>1
    nginx.ingress.kubernetes.io/affinity: "cookie"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - account.needless.info
      secretName: lldap-tls
  rules:
    - host: account.needless.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap
                port:
                  number: 17170
